# golutra

./: .gitignore  CLA.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  startup_processmd.md  vite.config.ts
src-tauri/: Cargo.toml  build.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: chat.rs  command.rs  mod.rs  project.rs
src-tauri/src/contracts/: chat_dispatch.rs  mod.rs  terminal_message.rs
src-tauri/src/message_service/: mod.rs  project_data.rs  project_members.rs
src-tauri/src/message_service/chat_db/: mod.rs  outbox.rs  read.rs  store.rs  terminal_session_map.rs  types.rs  write.rs
src-tauri/src/message_service/pipeline/: dispatch.rs  mod.rs  normalize.rs  policy.rs  (+3 more)
src-tauri/src/orchestration/: chat_dispatch_batcher.rs  chat_outbox.rs  dispatch.rs  mod.rs  terminal_friend_invite.rs
src-tauri/src/platform/: activation.rs  mod.rs  paths.rs  updater.rs
src-tauri/src/ports/: message_service.rs  mod.rs  settings.rs  terminal_dispatch_gate.rs  terminal_event.rs  terminal_message.rs  terminal_session.rs
src-tauri/src/runtime/: command_center.rs  command_ipc.rs  mod.rs  pty.rs  settings.rs  state.rs  storage.rs
src-tauri/src/terminal_engine/: emulator.rs  errors.rs  mod.rs  models.rs  semantic.rs
src-tauri/src/ui_gateway/: app.rs  commands.rs  message.rs  message_pipeline.rs  mod.rs  monitoring.rs  notification.rs  platform.rs  project_data.rs  project_members.rs  project_skills.rs  skills.rs  terminal.rs  terminal_events.rs  terminal_session_repository.rs
(+165 files in other folders)
