[package]
name = "golutra"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "golutra"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
sha2 = "0.10"
fs2 = "0.4"
portable-pty = "0.9.0"
tauri = { version = "2.9.5", features = ["tray-icon", "image-png"] }
tokio = { version = "1", features = ["time"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
redb = "2"
bincode = "1.3"
ulid = "1"
wezterm-term = { package = "tattoy-wezterm-term", version = "0.1.0-fork.5" }
interprocess = "1.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_Console"] }
